TypeUtilities for resolve types using .AsType(string). Type.GetType() only works in the calling assembly
Fixing lexer bug: !new) now is two tokens !new and )
RemotingHostServer.st example with tests
RemotingHostClient.st example with tests

2010-10-17
RemoteObject with tests
RemotingHostServer.st example with remote object
RemotingHostClient.st example with remote object
Transaction (WIP)
TransactionalValue (WIP) with tests

2010-10-20
New Class Diagrams

2010-10-22
static methods in .NET invoked without !
Few tests added for .NET method invocation

2010-10-24
IObjectDecorator
TransactionManager
TransactionalObject with tests
More tests for TransactionalValue

2010-11-07
CollectionBehavior, .Do and .Select
binaryMethods in DotNetObject
binaryOperators in Parser
Drop Add, Substract... bytecodes
Block.CompileBinarySend
do: for IEnumerable with tests
select: for IEnumerable with tests
ObjectOperators with tests
BooleanBehavior, used in Machine and DotNetObject, with Tests

2010-11-11
AjTalk.Console
Remoting modification (ChannelServices.RegisterChannel once)
Programs examples in AjTalk.Console
Downloader.st

2010-11-12
TransactionManager as property in Machine
Programs\Transactions.st
Programs\TransactionExample.st

2010-11-13
TransactionExample.st fixed
RunAll.cmd, RunTransaction.cmd in AjTalk.Console

2010-11-20
BaseMetaClassTests
BaseMetaClass.CreateClass with tests
Machine.CreateClass to use BaseMetaClass
BehaviorDoesNotUnderstand using the new Machine.CreateClass methods
IBehavior in constructors
BaseBehavior now receives an IBehavior as first parameter in constructor
NativeBehavior now receives an IBehavior as first constructor parameter
nil removed as GlobalObject in Machine
Machine.UndefinedObjectClass
Machine.ClassClass
Machine.MetaClassClass
Send bytecode use Machine.UndefinedObjectClass if receiver is null
Object.st new test
Class.st new test, defining Class protocol

Angel "Java" Lopez
http://www.ajlopez.com/en
http://ajlopez.wordpress.com/