@@ -28,6 +28,12 @@ ClassDescription subclass:#Class
 	category:'Kernel-Classes'
 !
 
+"Tricky code: first knot in class hierarchy"
+Object !!metaclass !!setSuperClass: Class.
+Class !!defineInstanceMethod: (@AjTalk.Language.BehaviorDoesNotUnderstandMethod new: (Class !!machine)).
+Class !!machine !!classClass: Class.
+!
+
 ClassDescription subclass:#Metaclass
 	instanceVariableNames:'myClass'
 	classVariableNames:'ConfirmationQuerySignal'
