@@ -199,6 +199,8 @@ Machine.MetaClassClass
 Send bytecode use Machine.UndefinedObjectClass if receiver is null
 Object.st new test
 Class.st new test, defining Class protocol
+Behavior.st new test, defining compile: in Behavior. Knot: Behavior is Object class superclass.
+Class.st, Library.st: Knot added: Class is Object class superclass. Removed from Machine source code.
 
 Angel "Java" Lopez
 http://www.ajlopez.com/en
